--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -3,6 +3,18 @@
 
     <string name="app_name">短信拦截</string>
     <string name="action_settings">Settings</string>
+    <string name="action_refresh">refresh</string>
     <string name="hello_world">Hello world!</string>
-
+    <string name="title_activity_fliter_setting">拦截规则</string>
+    
+    <string name="title_addfliter">增加过滤规则</string>
+    <string name="confirm_ok">确认</string>
+    <string name="confirm_cancel">取消</string>
+    
+    <string name="dialog_number">电话号码</string>
+    <string name="dialog_fliterinfo">规则</string>
+    <string name="menu_delete">删除</string>
+    <string name="delete_confirm_title">提示</string>
+    <string name="delete_confirm_msg">确定删除</string>
+    
 </resources>
