--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -2,6 +2,7 @@
 <resources>
 
     <string name="app_name">短信拦截</string>
+    <string name="action_clear">清空</string>
     <string name="action_settings">Settings</string>
     <string name="action_refresh">refresh</string>
     <string name="hello_world">Hello world!</string>
